--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,26 +1,61 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-}
 header{
-    background-color: rgb(184, 40, 184);
-    height: 10vh;
-}
-nav{
-    background-color: rgb(161, 83, 83);
-    height: 5vh;
-}
-main{
-    background-color: gold;
-    height: 70vh;
-}
-footer{
-    background-color: cadetblue;
-    height: 10vh;
-}
-
-nav, footer, main, nav, header{
-    width: 95%;
-    margin: 3px auto;
-    border: 1px solid #cec2c2;
-
+    background-color: #0460D9;
+    display: flex;
+    align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    }
+    
+    * {
+    margin: 0 auto;
+    }
+    
+    nav{
+    height: 30px;
+    background-color:#033E8C;
+    }
+    
+    main{
+    height: 700px;
+    background-color: #80868C;
+    }
+    
+    footer{
+    height: 125px;
+    background-color: #033E8C;
+    }
+    
+    header, nav, main, footer{
+    width: 90%;
+    border: solid #ededed 1px;
+    margin-bottom: 3px;
+    }
+    
+    h1{
+    flex: 40%;
+    padding-left: 20px;
+    box-sizing: border-box;
+    }
+    
+    form{
+    flex: 60%;
+    }
+    
+    /* Parte para celular */
+    @media only screen and (max-width: 600px){
+    header{
+    flex-direction: column;
+    border: 1px solid black;
+    margin-top: 10px;
+    background-color: #0460D9;
+    }
+    
+    form{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    h1{
+        padding-left: 0;
+    }
 }
